# CAM-SECURITY-GUARD

./: README.md  config.json  pyproject.toml  requirements.txt
security_guard/: alerts.py  bot.py  camera.py  config.py  detection.py  main.py  recorder.py  webapp.py
