[project]
name = "cam-security-guard"
version = "1.1.0"
description = "AI-powered multi-camera security system"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["security_guard"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.ruff]
target-version = "py310"
line-length = 88

# Enable commonly useful rule sets:
# E: pycodestyle (PEP8)
# F: pyflakes
# I: import sorting
# B: flake8-bugbear
# UP: pyupgrade
# N: naming conventions (optional, you can remove it if it is too strict)
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
]

# Let Black handle line length; Ruff will not complain about long lines.
ignore = [
  "E501",
]

[tool.ruff.lint]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"